<resources>
    <string name="app_name">BlaBlarCar</string>
    <string name="prefs_file">org.cuatrovientos.blablacar.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="other_options_text">-- Otras opciones --</string>
    <string name="login_error_message">Error: El usuarios no existe</string>
    <string name="error_user_auth">Error: Se ha producido un error autenticando el usuario</string>
    <string name="addRoutes">Publicar</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
    <string name="ubication">Escriba su ubicación…</string>
    <string name="find_travel">Buscar viaje</string>
    <string name="seats">Asientos</string>
    <string name="cuatrovientos">Cuatrovientos</string>
    <string name="select_your_travel">¡Publica tu viaje!</string>
    <string name="help_environment">¿Quieres ayudar al medio ambiente?</string>
    <string name="logout">Cerrar sesión</string>
    <string name="about">Sobre mí</string>
    <string name="bio">Biografía</string>
    <string name="user_information">Información de usuario</string>
    <string name="username_">Nombre de usuario</string>
    <string name="gender">Género</string>
    <string name="age">Edad</string>
    <string name="date_of_birth">Cumpleaños</string>
    <string name="mobile">Número de teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="default_web_client_id">757135302431-in9f3nggjfgg4bu05put96r0ov1ra4s2.apps.googleusercontent.com</string>
    <string name="routes_history">Tus Viajes</string>
</resources>