<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <TextView
        android:id="@+id/LoginLblAppname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginLblUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/usuario"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/LoginLblContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/contraseña"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/LoginLblUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginLblUsuario"
        app:layout_constraintTop_toBottomOf="@+id/LoginLblUsuario" />

    <Button
        android:id="@+id/LoginBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLblContraseña" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="135dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@+id/LoginLblAppname"
        app:layout_constraintStart_toStartOf="@+id/LoginLblAppname"
        app:layout_constraintTop_toBottomOf="@+id/LoginLblAppname"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/LoginTxtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/LoginLblUsuario"
        app:layout_constraintStart_toEndOf="@+id/LoginLblUsuario"
        app:layout_constraintTop_toTopOf="@+id/LoginLblUsuario" />

    <EditText
        android:id="@+id/LoginTxtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/LoginLblContraseña"
        app:layout_constraintStart_toEndOf="@+id/LoginLblContraseña"
        app:layout_constraintTop_toTopOf="@+id/LoginLblContraseña" />

    <Button
        android:id="@+id/LoginBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/LoginBtnLogin"
        app:layout_constraintStart_toEndOf="@+id/LoginBtnLogin"
        app:layout_constraintTop_toTopOf="@+id/LoginBtnLogin"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>